k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sagarmauroz-dev
  labels:
    app.kubernetes.io/name: queueless
    app.kubernetes.io/part-of: queueless
