k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: queueless
  namespace: sagarmauroz-dev
  labels:
    app: queueless
spec:
  type: ClusterIP
  selector:
    app: queueless
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
