k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: queueless
  namespace: sagarmauroz
  annotations:
    haproxy.router.openshift.io/timeout: 30s
spec:
  to:
    kind: Service
    name: queueless
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
